# nano-LLM

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
attention/: attn.py
decoding/: sampling.py
docs/: RoPE.md  attention_mechanism.md  gradient_accumulation.md  kv_cache_benchmark_mps.md  kv_cache_rope_fix.md  torch_basic.md
docs/assets/: rope_causal_mask_visualization.html
examples/: pretrain_mps.sh
model/: bert.py  llms.py  llms_fixed.py  rope.py
test/: test_attn.py  test_kvcache.py  test_tokenizer.py  test_torch.py
train/: README.md  download_subset.py  pretrain.py
train/preprocess/: download_openwebtext.py  download_subset.py  prepare_subset.py
