[project]
name = "infra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "datasets>=2.20.0",
    "tqdm>=4.66.0",
    "tensorboard>=2.16.0",
    "requests>=2.31.0",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
